@@ -47,13 +47,14 @@
 							<option value="0"<?php if ($_REQUEST["template_id"] == "0") {?> selected<?php }?>>None</option>
 							<?php
 							if (read_config_option("auth_method") != 0) {
-								$templates = db_fetch_assoc("SELECT DISTINCT graph_templates.id, graph_templates.name
+								$templates = db_fetch_assoc("SELECT DISTINCT graph_templates.id, graph_templates.name 
 									FROM (graph_templates_graph,graph_local)
 									LEFT JOIN host ON (host.id=graph_local.host_id)
 									LEFT JOIN graph_templates ON (graph_templates.id=graph_local.graph_template_id)
 									LEFT JOIN user_auth_perms ON ((graph_templates_graph.local_graph_id=user_auth_perms.item_id and user_auth_perms.type=1 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . ") OR (host.id=user_auth_perms.item_id and user_auth_perms.type=3 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . ") OR (graph_templates.id=user_auth_perms.item_id and user_auth_perms.type=4 and user_auth_perms.user_id=" . $_SESSION["sess_user_id"] . "))
 									WHERE graph_templates_graph.local_graph_id=graph_local.id
-									" . (empty($sql_where) ? "" : "and $sql_where") . "
+									AND graph_templates.id IS NOT NULL
+									" . (empty($sql_where) ? "" : "AND $sql_where") . "
 									ORDER BY name");
 							}else{
 								$templates = db_fetch_assoc("SELECT DISTINCT graph_templates.id, graph_templates.name
